fixed recognizing of names in debate transcripts

--- a/fixed_debates/debate_65799.html
+++ b/fixed_debates/debate_65799.html
@@ -2211,7 +2211,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Ján Bielik:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec J. Bielik:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2221,7 +2221,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Vladimír Miškovský:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec V. Miškovský:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2231,7 +2231,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Jozef Polačko:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec J. Polačko:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2241,7 +2241,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Martin Vrábeľ:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec M. Vrábeľ:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2251,7 +2251,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Boris Zala:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec B. Zala:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2261,7 +2261,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Dušan Dorotin:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec D. Dorotin:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2271,7 +2271,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Vladimír Markovič:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec V. Markovič:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2281,7 +2281,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Rudolf Chmel:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec R. Chmel:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2291,7 +2291,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Jozef Murgaš:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec J. Murgaš:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2301,7 +2301,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Ivan Jaroš:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec I. Jaroš:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2311,7 +2311,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Ján Krivčík:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec J. Krivčík:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2321,7 +2321,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Jozef Habovštiak:<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec J. Habovštiak:<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
@@ -2331,7 +2331,7 @@ style="mso-spacerun: yes">     </span>Sľubujem.<o:p></o:p></span></p>
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><span
-style="mso-spacerun: yes">     </span>Poslanec Anton Straka: Sľubujem.<o:p></o:p></span></p>
+style="mso-spacerun: yes">     </span>Poslanec A. Straka: Sľubujem.<o:p></o:p></span></p>
 
 <p class=MsoPlainText><span lang=SK style='mso-fareast-font-family:"MS Mincho"'><![if !supportEmptyParas]>&nbsp;<![endif]><o:p></o:p></span></p>
 
